# tdls

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
docs/: Doxyfile  requirements.txt
docs/sphinx/: api_reference.md  conf.py  examples.md  getting_started.md  index.md  tests.md  tfel_interoperability.md
examples/: CMakeLists.txt  implicit_ode_batch_gpu.cu  implicit_ode_batch_gpu_soa.cu  implicit_ode_batch_omp.cpp  rbf_interpolation.cpp
examples/common/: gpu_runtime.hpp
examples/tiled_lupp/: CMakeLists.txt
examples/tiled_lupp/cpu_openmp/: CMakeLists.txt  integral_equation_batch_omp.cpp
examples/tiled_lupp/cpu_sequential/: CMakeLists.txt  implicit_ode.cpp  integral_equation.cpp
examples/tiled_lupp/gpu_cuda_or_hip/: CMakeLists.txt  integral_equation_batch_gpu.cu  integral_equation_batch_gpu_soa.cu
include/tdls/: adaptors.hpp  tdls.hpp
include/tdls/core/: adaptors.hpp  version.hpp
include/tdls/solvers/tiled_lu/: config.hpp  solver_dynamic.hpp  solver_static.hpp  tile_ops.hpp
include/tdls/solvers/tiled_lupp/: config.hpp  solver_dynamic.hpp  solver_static.hpp  tile_ops.hpp
tests/: CMakeLists.txt
tests/common/: harness.hpp  reference_lu.hpp
tests/solvers/: CMakeLists.txt
tests/solvers/tiled_lupp/: reject_config_double_thresholds.cpp  reject_config_eps_above_threshold.cpp  reject_config_float_thresholds.cpp  residency_runner.hpp  test_adaptors.cpp  test_config_knobs.cpp  test_cross_full.cpp  test_dynamic_edges.cpp  test_entry_points.cpp  test_inplace_paths.cpp  test_layouts.cpp  test_oracle_dynamic.cpp  test_oracle_static.cpp  test_residencies.cpp  test_singular.cpp  test_static_vs_dynamic.cpp  test_tile_sizes.cpp
